--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react-router": "^6.6.1",
         "react-router-dom": "^6.6.1",
         "uuid": "^9.0.0",
+        "web-vitals": "^3.1.0",
         "zustand": "^4.1.5"
     },
     "devDependencies": {
