--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
         "axios": "^1.2.2",
         "crypto-js": "^4.1.1",
         "dayjs": "^1.11.7",
+        "invariant": "^2.2.4",
+        "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-fast-compare": "^3.2.0",
         "react-icons": "^4.7.1",
         "react-router": "^6.6.1",
         "react-router-dom": "^6.6.1",
+        "shallowequal": "^1.1.0",
         "uuid": "^9.0.0",
         "web-vitals": "^3.1.0",
         "zustand": "^4.1.5"
@@ -27,9 +31,11 @@
         "@antfu/eslint-config": "^0.34.0",
         "@babel/core": "^7.20.7",
         "@ffflorian/jszip-cli": "^3.1.6",
+        "@types/invariant": "^2.2.35",
         "@types/node": "^18.11.18",
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.10",
+        "@types/shallowequal": "^1.1.1",
         "@types/uuid": "^9.0.0",
         "@unocss/reset": "^0.48.0",
         "@unocss/transformer-compile-class": "^0.48.0",
