--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@loadable/component": "^5.15.2",
         "axios": "^1.2.2",
+        "clsx": "^1.2.1",
         "crypto-js": "^4.1.1",
         "dayjs": "^1.11.7",
         "invariant": "^2.2.4",
@@ -19,6 +20,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-fast-compare": "^3.2.0",
+        "react-hook-form": "^7.41.3",
         "react-icons": "^4.7.1",
         "react-router": "^6.6.1",
         "react-router-dom": "^6.6.1",
