--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@loadable/component": "^5.15.2",
+        "@tanstack/table-core": "^8.7.4",
         "axios": "^1.2.2",
         "clsx": "^1.2.1",
         "crypto-js": "^4.1.1",
@@ -32,6 +33,7 @@
     "devDependencies": {
         "@antfu/eslint-config": "^0.34.0",
         "@babel/core": "^7.20.7",
+        "@faker-js/faker": "^7.6.0",
         "@ffflorian/jszip-cli": "^3.1.6",
         "@types/invariant": "^2.2.35",
         "@types/node": "^18.11.18",
